# helix-config

./: config.toml  languages.toml  throw.ts
runtime/grammars/sources/bicep/: Cargo.toml  binding.gyp
runtime/grammars/sources/bicep/bindings/node/: binding.cc  index.js
runtime/grammars/sources/bicep/bindings/rust/: lib.rs
runtime/grammars/sources/bicep/src/: grammar.json  node-types.json  parser.c
runtime/grammars/sources/blueprint/: Cargo.toml  README.md  grammar.js  package-lock.json  package.json
runtime/grammars/sources/cpon/: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json
runtime/grammars/sources/dtd/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
runtime/grammars/sources/edoc/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
runtime/grammars/sources/opencl/: Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json
runtime/grammars/sources/opencl/bindings/node/: binding.cc  index.js
runtime/grammars/sources/opencl/bindings/rust/: lib.rs
runtime/grammars/sources/opencl/src/: grammar.json  node-types.json  parser.c
runtime/grammars/sources/t32/: .gitignore  .woodpecker.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  grammar.js  package.json
runtime/grammars/sources/t32/bindings/node/: binding.cc  index.js
runtime/grammars/sources/t32/bindings/rust/: lib.rs
runtime/grammars/sources/t32/queries/: highlights.scm  locals.scm  tags.scm
runtime/grammars/sources/t32/scripts/: pre-push.sh  update_version.sh
runtime/grammars/sources/t32/src/: grammar.json  node-types.json  parser.c  scanner.c
runtime/grammars/sources/t32/test/corpus/: ambiguities.txt  comments.txt  control_flow.txt  expressions.txt  hll.txt
runtime/grammars/sources/t32/test/highlight/: keywords.cmm  literals.cmm
runtime/grammars/sources/t32/test/tags/: subroutines.cmm
runtime/grammars/sources/wren/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  package.json.license
runtime/grammars/sources/wren/.reuse/: dep5
runtime/grammars/sources/wren/bindings/node/: binding.cc  index.js
runtime/grammars/sources/wren/bindings/rust/: lib.rs
runtime/grammars/sources/wren/src/: grammar.json  grammar.json.license  node-types.json  parser.c
runtime/grammars/sources/wren/test/corpus/: comments.txt  expressions.txt  statements.txt
themes/: custom.toml
(+158 files in other folders)
