# SPDX-FileCopyrightText: 2023 Jummit <jummit@web.de>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "tree-sitter-wren"
description = "wren grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "wren"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-wren"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
